2004-09-09  Francois Dumont  <dums@...>

	* stlport/stl/_config.h: _STLP_DONT_USE_NESTED_TCLASS_THROUGHT_TPARAM 
	renamed to the more intuitive _STLP_DONT_SUPPORT_REBIND_MEMBER_TEMPLATE.

	* stlport/stl/_config.h: Introduction of a new namespace stlp_private
	defined in the global namespace. Everything that is STLport implementation
	details should be in this namespace to avoid polution of the std namespace.
	
	* stlport/stl/_iterator_base.h: Modification of the macro used to create
	iterator traits for all tree and hashtable based containers to move it in
	the stlp_private namespace rather than defining it as nested struct, limits
	the symbol size.
	
2004-09-08  Francois Dumont  <dums@...>

	* test/unit/fstream_test.cpp: restauration of the test added by Petr
	the 2004-09-03, it is finaly a different test from the one in sstream_test.cpp.
	Some more checks have also been integrated.
	
	* stlport/stl/_ostream.c: New fix of the _M_unbuffured_copy method that was
	still bugged in case of a throwing output streambuf, detected thanks to the
	test case.
	
2004-09-07  Francois Dumont  <dums@...>

	* stlport/config/stl_msvc.h: Add defines of the _STLP_USE_STATIC_LIB
	or _STLP_USE_DYNAMIC_LIB depending on the current kind of build.
	
	* stlport/stl/_streambuf.h, _streambug.c: Fix an unresolved symbol 
  problem for MSVC6 (and before?) when STLport is used as a static library.

2004-09-06  Francois Dumont  <dums@...>

	* test/unit/nmake-evc-common.mak: Use of the dynamic runtime for the
	*-shared rules rather than the previous static thanks Michael Fink.
	
	* test/unit/nmake-evc*.mak: end of build code factorisation, use of 
	nmake-evc-common.mak within all makefiles thanks Michael Fink.
	
	* test/unit/locale_test.cpp: Application of a patch from Michael Fink
	to check the "C" locale on all platforms. Fix of the money_get_put test
	case for the "C" locale.
	
	* test/unit/allocator_test.cpp: new test case for std::allocator checks.

2004-09-05  Francois Dumont  <dums@...>
